--- a/styles/my_style.css
+++ b/styles/my_style.css
@@ -23,3 +23,14 @@ body{
 img {
 	position: absolute;
 }
+
+
+a{
+	font-size: 2em;
+	color: white;
+	text-decoration: none;
+}
+
+a:hover{
+	color: yellow;
+}
